--- a/src/problem5/docker-compose.yml
+++ b/src/problem5/docker-compose.yml
@@ -4,13 +4,29 @@ services:
     image: mongo:4.2
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: qoals@123
-      MONGO_INITDB_DATABASE: baemin
+#      MONGO_INITDB_ROOT_USERNAME: root
+#      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: product
     ports:
       - 27017:27017
+    volumes:
+        - mongo_data:/data/db
   redis:
    image: redis:5.0.3
    restart: always
    ports:
      - 6379:6379
+  app:
+    build: .
+    restart: always
+    ports:
+      - 8080:8080
+    depends_on:
+      - mongo
+      - redis
+    environment:
+      MONGO_URI: mongodb://mongo:27017/product
+      REDIS_URI: redis://redis:6379
+      PORT: 8080
+volumes:
+  mongo_data:
