--- a/src/problem5/package.json
+++ b/src/problem5/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc",
-    "start:dev": "npm run build && node dist/server.js"
+    "start:dev": "npm run build && node dist/server.js",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "Nguyen Thanh Cong",
